06.11 tests fixing